First commited as after_47206_rev1

--- a/org.eclipse.egit.ui/css/e4-dark_egit_prefstyle.css
+++ b/org.eclipse.egit.ui/css/e4-dark_egit_prefstyle.css
@@ -35,3 +35,8 @@ Form Section LayoutComposite StyledText
     background-color: #313538;
     color: #dddddd;
  }
+
+SpellcheckableMessageArea {
+	background-color: red;
+}
+
