First commited as after_47206_rev2

--- a/org.eclipse.egit.ui/css/e4-dark_egit_prefstyle.css
+++ b/org.eclipse.egit.ui/css/e4-dark_egit_prefstyle.css
@@ -35,3 +35,9 @@ Form Section LayoutComposite StyledText
     background-color: #313538;
     color: #dddddd;
  }
+
+PushResultTable-5 StyledText {
+	background-color: #313538;
+	color: #dddddd;
+}
+
